# info-server

./: .gitignore  README.md
.github/workflows/: automated-deploy.yml  ci.yml
althea-info-dash/public/: index.html  manifest.json
althea-info-dash/src/: App.tsx  types.tsx
althea-info-server/: Cargo.toml
althea-info-server/src/: config.rs  endpoints.rs  main.rs  tls.rs  total_suppy.rs  tvl.rs
scripts/: build-and-deploy.sh  deploy-info-server.yml  hosts
scripts/roles/install-deps/tasks/: main.yml
scripts/roles/setup-info-server/tasks/: main.yml  systemd.yml
scripts/roles/setup-info-server/templates/: althea-info-server.service.j2
scripts/roles/setup-nginx/defaults/: main.yml
scripts/roles/setup-nginx/tasks/: main.yml
scripts/roles/setup-nginx/templates/: info-dash.conf.j2
