[package]
name = "althea-info-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deep_space = "2.27"
web30 = "1.5.1"
clarity = "1.5.1"
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
actix-web = {version = "4.9", features = ["rustls"]}
actix-cors = "0.6"
rustls = "0.20"
rustls-pemfile = "0.3"
lazy_static = "1.5"
tonic = "0.12"
futures = "0.3"
num256 = "0.6"
openssl-probe = "0.1"
tokio = {version="1", features=["rt-multi-thread"]}
cosmos-sdk-proto-althea = "0.18"
sha256 = "1"
prost-types ="0.13"
actix-rt = "2.10.0"
serde_json = "1.0"
json = "0.12.4"
hex = "0.4"
chrono = "0.4"
rust_decimal= "1.36"

[features]
development = []
